--- a/src/components/Member.module.css
+++ b/src/components/Member.module.css
@@ -50,6 +50,7 @@ html::-webkit-scrollbar {
 
 .fcontent2 {
     font-size: 0.8rem;
+    margin-top: 1vh;
 }
 
 .fImg {
@@ -155,6 +156,11 @@ html::-webkit-scrollbar {
     position:relative;
     width:80%;
     height:100vh;
+}
+
+button {
+    background-color:rgba(0,0,0,0);
+    font-size: 1rem;
 }
 
 /* 움직이는 모션 */
