스크롤바 삭제 ^>^

--- a/src/components/Member.module.css
+++ b/src/components/Member.module.css
@@ -9,7 +9,7 @@ html, body {
     border-right: thin solid #ffffff;
 }
 
-html::-webkit-scrollbar {
+body::-webkit-scrollbar {
     display: none;
 }
 
