--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ html, body {
 
 html::-webkit-scrollbar {
     display: none;
+    overflow: hidden
 }
 
 video::-webkit-scrollbar {
@@ -25,7 +26,7 @@ video::-webkit-scrollbar {
 }
 
 body.no-scroll {
-    overflow: hidden !important
+    overflow: hidden !important;
 }
 
 span {
