--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,7 @@ nav {
     align-items: center;
     display: flex;
     flex-direction: row;
+    transition: top 0.5s;
 }
 
 li {
@@ -79,7 +80,7 @@ a:visited {
     color: rgb(134, 134, 134);
 }
 
-#nav {
+header {
     height: 60px;
     display: flex;
     padding: 16px;
@@ -91,7 +92,7 @@ a:visited {
     z-index: 100;
     background-color: black;
     border-bottom: 1px solid #ffffff;
-    transition: top 0.3s;
+    transition: top 0.5s;
 }
 
 .nav {
@@ -99,7 +100,7 @@ a:visited {
     justify-content: flex-end;
     width: 100%;
     height: 72px;
-    /* position: fixed; */
+    position: fixed;
     bottom: 0;
     z-index: 99;
     top: 0;
