--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@ a:visited {
     color: rgb(134, 134, 134);
 }
 
-header {
+header, nav {
     height: 60px;
     display: flex;
     padding: 16px;
@@ -95,15 +95,18 @@ header {
     transition: top 0.5s;
 }
 
-.nav {
-    display: flex;
-    justify-content: flex-end;
-    width: 100%;
-    height: 72px;
-    position: fixed;
-    bottom: 0;
+.original_header {
     z-index: 99;
+    position: fixed;
+    width: 100%;
+    height: 92px;
     top: 0;
+}
+
+.change_header {
+    top: -200px;
+    width: 100%;
+    height: 92px;
 }
 
 .logo {
