--- a/src/components/Member.module.css
+++ b/src/components/Member.module.css
@@ -67,7 +67,7 @@ body::-webkit-scrollbar {
     width: 78%;
     height: 100vh;
     margin-top: 11.32vh;
-    z-index: 99;
+    z-index: 98;
     margin-left: 10%;
 }
 
@@ -88,7 +88,7 @@ body::-webkit-scrollbar {
     width: 43.6vw;
     gap: 6vw;
     height: 75vh;
-    z-index: 99;
+    z-index: 98;
     
     flex-wrap: wrap;
 }
@@ -106,14 +106,14 @@ body::-webkit-scrollbar {
     position: relative;
     width: 65vw;
     height: 90.32vh;
-    z-index: 99;
+    z-index: 98;
     margin-top: 4.68vh;
     margin-left: auto;
     margin-right: auto;
 }
 
 .arrow {
-    z-index: 99;
+    z-index: 98;
     font-family: 'Noto Sans KR', sans-serif;
     display: flex;
     position: absolute;
@@ -141,7 +141,7 @@ body::-webkit-scrollbar {
 }
 
 .grade {
-    position:fixed;
+    /* position:fixed; */
     top : 18%;
     right:4%;
     display : flex;
