버튼 스타일 지움

--- a/src/components/Member.module.css
+++ b/src/components/Member.module.css
@@ -159,6 +159,8 @@ body::-webkit-scrollbar {
 }
 
 button {
+    outline: 0;
+    border: 0;
     background-color:rgba(0,0,0,0);
     font-size: 1rem;
 }
