--- a/src/App.css
+++ b/src/App.css
@@ -109,6 +109,11 @@ header, nav {
     height: 92px;
 }
 
+button {
+    outline: 0;
+    border: 0;
+}
+
 .logo {
     width: 80px;
     height: 58px;
