--- a/src/App.css
+++ b/src/App.css
@@ -387,4 +387,434 @@ ul.nav-right > li:nth-child(2) {
     100% {
       opacity: 0;
     }
-  }
+  }::-webkit-scrollbar {
+    display: none;
+}
+
+/* Noto Sans KR */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;600;700;800&display=swap');
+
+/* use Noto Sans Kr */
+/* font-family: 'Noto Sans KR', sans-serif; */
+
+/* Time New Roman */
+@import url('https://fonts.cdnfonts.com/css/times-new-roman');
+
+* {
+    /* outline: solid 1px red; */
+    color: white;
+    font-family: 'Noto Sans KR', sans-serif;
+}
+
+html,
+body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    background-color: black;
+    border-right: thin solid #ffffff;
+}
+
+html::-webkit-scrollbar {
+    display: none;
+    overflow: hidden
+}
+
+video::-webkit-scrollbar {
+    display: none;
+}
+
+body.no-scroll {
+    overflow: hidden !important;
+}
+
+span {
+    display: block;
+    margin: 0 auto;
+    font-size: 30px;
+    text-align: center;
+}
+
+section {
+    width: 60%;
+}
+
+video {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+}
+
+video::-webkit-scrollbar {
+    display: none;
+}
+
+nav {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    transition: top 0.5s;
+}
+
+li {
+    float: left;
+    font-size: 16px;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-style: bold;
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover,
+a:focus {
+    animation-duration: 1.5s;
+    animation-name: colorChange;
+}
+
+@keyframes colorChange {
+    0% {
+        color: #585858;
+        ;
+    }
+
+    100% {
+        color: #ffffff;
+    }
+}
+
+a:visited {
+    /* a 태그 갔다왔을 때 색깔 black*/
+    color: rgb(134, 134, 134);
+}
+
+header,
+nav {
+    height: 60px;
+    display: flex;
+    padding: 16px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    align-items: center;
+    z-index: 999;
+    background-color: black;
+    border-bottom: 1px solid #ffffff;
+    transition: top 0.5s;
+}
+
+.original_header {
+    z-index: 98;
+    position: fixed;
+    width: 100%;
+    height: 92px;
+    top: 0;
+}
+
+.change_header {
+    top: -200px;
+    width: 100%;
+    height: 92px;
+}
+
+button {
+    outline: 0;
+    border: 0;
+}
+
+.logo {
+    width: 80px;
+    height: 58px;
+    /* background-color: #ffffff; */
+    margin: 2% 1% 1% 1%;
+}
+
+.nav-list {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    list-style-type: none;
+    margin: 46px 5.9% 8px 0;
+    padding: 0;
+    border-right: 1px;
+    border-color: white;
+}
+
+.nav-item {
+    text-align: center;
+    height: 100%;
+    width: 11%;
+    float: left;
+    margin-right: 4%;
+    color: #585858;
+}
+
+/* 세로 구분선 */
+
+.hr-div {
+    display: flex;
+    width: 1px;
+    height: 3000px;
+    border-left: 1px solid #ffffff;
+}
+
+.hr-div2 {
+    display: flex;
+    width: 1px;
+    height: 3000px;
+    border-left: 1px solid #ffffff;
+    margin-left: -4px;
+}
+
+.nav-right {
+    display: block;
+    margin: 30px 3% 1% 1%;
+    padding: 0;
+}
+
+.nav-info {
+    width: 100%;
+    color: #585858;
+}
+
+ul.nav-right>li:nth-child(2) {
+    color: #ffffff;
+}
+
+.video-box {
+    position: relative;
+    width: 100%;
+    display: block;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.video {
+    z-index: 99;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+}
+
+.panel {
+    margin: 0 auto;
+    position: absolute;
+    top: 10px;
+    width: 78%;
+    height: 100%;
+    margin-top: 130px;
+    z-index: 98;
+    margin-left: 10%;
+}
+
+.main-text {
+    position: absolute;
+    top: 16.19vh;
+    left: 41vw;
+}
+
+.name-text {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 6.8rem;
+    width: 100%;
+}
+
+.intro-text {
+    width: 70%;
+    margin-top: 20px;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: #cacaca;
+}
+
+
+.the-text {
+    font-family: 'Noto Sans KR', sans-serif;
+    margin-top: 68.55vh;
+    display: flex;
+    justify-content: space-around;
+    margin-left: 250px;
+}
+
+.title {
+    width: 190px;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.content {
+    width: 200px;
+    font-size: 12px;
+    color: #b5b5b5;
+    font-weight: 400;
+}
+
+.panel2 {
+    display: flex;
+    margin-top: 300px;
+    position: absolute;
+    width: 78%;
+    height: 80%;
+    z-index: 98;
+    margin-left: 10%;
+}
+
+.sub-main-text {
+    margin-left: 100px;
+    margin-top: 30px;
+    width: 50%;
+}
+
+.sub-main-text p {
+    font-style: 'Noto Sans KR', sans-serif;
+    font-weight: 700;
+    font-size: 6rem;
+    margin: 0;
+    padding: 0 10px 0 0;
+}
+
+.sub-sub-text {
+    width: 130%;
+    margin-top: 30px;
+    margin-left: -120px;
+}
+
+.sub-content {
+    font-weight: 400;
+    font-size: 26px;
+    margin-left: 8rem;
+    width: 60%;
+    color: #b5b5b5;
+    text-align: left;
+}
+
+.sub-img {
+    margin-top: -16vh;
+    width: 720px;
+    height: 827px;
+}
+
+.img {
+    width: 100%;
+}
+
+.f-panel {
+    display: flex;
+    margin-top: 240px;
+    margin-bottom: 50px;
+    margin-left: 10%;
+    position: absolute;
+    width: 78%;
+    height: 120px;
+    z-index: 98;
+}
+
+.footer {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: baseline;
+}
+
+.section {
+    display: block;
+    text-align: center;
+}
+
+.f-content {
+    color: #666;
+}
+
+.f-content:hover {
+    color: #fff;
+}
+
+.f-title {
+    font-size: 22px;
+    cursor: pointer;
+    font-weight: 400;
+}
+
+.f-content {
+    font-size: 16px;
+    font-weight: 400;
+    transition: 0.2s ease-in-out;
+    cursor: pointer;
+}
+
+.t {
+    position: absolute;
+    display: block;
+    width: 30%;
+    left: 12%;
+    top: 2vh;
+}
+
+.t1 {
+    font-size: 13px;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: normal;
+    color: #585858;
+    text-align: start;
+    margin-left: 4px;
+}
+
+.t2 {
+    font-size: 30px;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 400;
+    text-align: start;
+    position: absolute;
+}
+
+.grade {
+    position: fixed;
+    top: 18%;
+    right: 4%;
+    display: flex;
+}
+
+.grade-list {
+    display: flex;
+    flex-direction: column;
+}
+
+.grade-list li:hover {
+    cursor: pointer;
+}
+
+@media (max-width : 1298.40px) {
+    .the-text {
+        margin-top: 520px;
+    }
+
+    .intro-text {
+        font-size: 12px;
+    }
+}
+
+.fade-out {
+    opacity: 0;
+    animation: fadeOut ease-in-out 10s;
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+
+    95% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
