프로젝트 이미지 추가

--- a/src/components/IndividualProject.module.css
+++ b/src/components/IndividualProject.module.css
@@ -28,8 +28,8 @@ body::-webkit-scrollbar {
 /* /////////////////////////////////////////// */
 
 .container {
-    margin: 0 auto;
-    width: 100%;
+    margin: 180px auto;
+    width: 1200px;
 }
 
 .project_info {
