--- a/src/App.css
+++ b/src/App.css
@@ -353,6 +353,7 @@ ul.nav-right > li:nth-child(2) {
     position:fixed;
     top : 18%;
     right:4%;
+    z-index: 999;
     display : flex;
 }
 
@@ -361,7 +362,7 @@ ul.nav-right > li:nth-child(2) {
     flex-direction: column;
 }
 
-.grade-list li:hover {
+.grade-list button {
     cursor: pointer;
 }
 
