data 수정 및 모토 추가

--- a/src/components/Individual.module.css
+++ b/src/components/Individual.module.css
@@ -441,7 +441,8 @@ ul.nav-right > li:nth-child(2) {
 
 .moto {
     position: absolute;
-    width: 19%;
+    width: 35%;
+    text-align: left;
     margin-top: 28%;
     left: 10.4%;
 }
