--- a/src/components/IndividualProject.module.css
+++ b/src/components/IndividualProject.module.css
@@ -69,7 +69,12 @@ img {
 
 .a {
     width: 100%;
-    height: 450px;
+    height: 590px;
     margin-bottom: 10px;
     background-color: white;
+    overflow: hidden;
+}
+
+.a img {
+    object-fit: contain;
 }
