--- a/src/components/Individual.module.css
+++ b/src/components/Individual.module.css
@@ -441,14 +441,14 @@ ul.nav-right > li:nth-child(2) {
 
 .moto {
     position: absolute;
-    width: 35%;
-    text-align: left;
-    margin-top: 28%;
-    left: 10.4%;
+    width: 32%;
+    margin-top: 38%;
+    left: 213px;
 }
 
 .pMoto {
-    font-size: 30px;
+    font-size: 25px;
     font-family: 'Noto Sans KR', sans-serif;
+    text-align: left;
     font-weight: bold;
 }
